Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjectField.quorum
class Main
    text v = Test()
    action Main
    end

    action Test() returns text
        Object var
        return var
    end
end